<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="silent_circle">Silent Circle</string>
	<string name="label_push_notifications"><xliff:g id="application_name">Silent Text</xliff:g> GCM Push Notifications</string>
	<string name="label_net_observer"><xliff:g id="application_name">Silent Text</xliff:g> System Network Stability</string>
	<string name="new_message">New message</string>
	<string name="copy">Copy</string>
	<string name="notifications">Notifications</string>
	<string name="privacy">Privacy</string>
	<string name="about">About</string>
	<string name="encryption">Encryption</string>
	<string name="privacy_statement">Privacy Statement</string>
	<string name="license_information">License Information</string>
	<string name="terms_and_conditions">Terms and Conditions</string>
	<string name="compose_hint">Type your message here</string>
	<string name="security_rating">Security rating</string>
	<string name="empty_conversation_list">You have no conversations.</string>
	<string name="burn_notice">Burn Notice</string>
	<string name="burn">Burn</string>
	<string name="current_passcode">Enter your current passphrase to continue.</string>
	<string name="passcode_warning">Important! Your passphrase cannot be recovered if lost, so remember it.</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="cannot_be_undone">This action cannot be undone.</string>
	<string name="save_will_expose_data">Saving this conversation will expose all of its messages to another application of your choice. Messages with an attachment or a burn notice will NOT be exported.</string>
	<string name="reset_keys_warning">Messages cannot be sent or received until new keys are established, which could take some time.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="cannot_open_file"><xliff:g id="application_name">Silent Text</xliff:g> cannot open this file. It may be saved, shared, or viewed with another application.</string>
	<string name="album_artwork">Album Artwork</string>
	<string name="activate">Activate</string>
	<string name="reset_keys">Reset Keys</string>
	<string name="unverified">Unverified</string>
	<string name="verified">Verified</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="settings">Settings</string>
	<string name="securing">Securing<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="downloading">Downloading<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="decrypting">Decrypting<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="waiting_for_connection">Waiting for connection<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="view">View</string>
	<string name="share">Share</string>
	<string name="share_location">Share Location</string>
	<string name="silent_phone_call">Call using Silent Phone</string>
	<string name="send_to">Send to<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="cancelled">Cancelled</string>
	<string name="username_unavailable"><xliff:g id="username">%1$s</xliff:g> is not available.</string>
	<string name="conversation_with">Conversation with <xliff:g id="username">%1$s</xliff:g></string>
	<string name="resend">Resend</string>
	<string name="progress_encrypting">Encrypting<xliff:g id="ellipsis" example="…">&#8230;</xliff:g> <xliff:g id="progress_percent" example="32%">%1$d%%</xliff:g></string>
	<string name="progress_preparing">Preparing<xliff:g id="ellipsis" example="…">&#8230;</xliff:g> <xliff:g id="progress_percent" example="32%">%1$d%%</xliff:g></string>
	<string name="progress_uploading">Uploading<xliff:g id="ellipsis" example="…">&#8230;</xliff:g> <xliff:g id="progress_percent" example="32%">%1$d%%</xliff:g></string>
	<string name="progress_exporting">Exporting<xliff:g id="ellipsis" example="…">&#8230;</xliff:g> <xliff:g id="progress_percent" example="32%">%1$d%%</xliff:g></string>
	<string name="location">Location</string>
	<string name="unlock">Unlock</string>
	<string name="autolock">Automatic Lock</string>
	<string name="lock_application">Lock Application</string>
	<string name="options">Options</string>
	<string name="view_with">Open <xliff:g id="file_name">%1$s</xliff:g></string>
	<string name="share_with">Share <xliff:g id="file_name">%1$s</xliff:g></string>
	<string name="none">(none)</string>
	<string name="saved_to">Saved to <xliff:g id="file_path">%1$s</xliff:g></string>
	<string name="lock_after">Lock automatically <xliff:g id="lock_timeout" example="in 30 seconds">%1$s</xliff:g></string>
	<string name="never_lock">Do not lock automatically</string>
	<string name="no_expiration">Messages do not expire</string>
	<string name="messages_expire">Messages expire <xliff:g id="expire_timeout" example="in 1 minute">%1$s</xliff:g></string>
	<string name="passcode">Passphrase</string>
	<string name="notify_new_passcode_set">A new passphrase has been set.</string>
	<string name="notify_passcode_removed">The passphrase has been removed.</string>
	<string name="notify_account_removed">The account has been removed.</string>
	<string name="activation_code">Activation Code</string>
	<string name="activation_code_description">Login or create an account at <xliff:g id="login_url">https://accounts.silentcircle.com</xliff:g>.</string>
	<string name="sc_privacy_link" translatable="false">https://silentcircle.com/privacy/</string>
	<string name="sc_tos_link" translatable="false">https://accounts.silentcircle.com/terms/</string>
	<string name="review_account_details">Please review that the following information is correct before creating your account.</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="finish">Finish</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="create_account">Create Account</string>
	<string name="create_an_account">Create an Account</string>
	<string name="creating_account">Creating account<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="send">Send</string>
	<string name="thumbnail">Thumbnail</string>
	<string name="delivered">Delivered</string>
	<string name="send_receipts">Send read receipts</string>
	<string name="set_passcode">Encrypt <xliff:g id="application_name">Silent Text</xliff:g></string>
	<string name="set_passcode_description">Require a passphrase to decrypt <xliff:g id="application_name">Silent Text</xliff:g> each time you use it.</string>
	<string name="remove_passcode">Remove passphrase</string>
	<string name="remove_passcode_description">You must confirm your current passphrase before it can be removed.</string>
	<string name="change_passcode">Change passphrase</string>
	<string name="sending">Sending<xliff:g id="ellipsis" example="…">&#8230;</xliff:g></string>
	<string name="clear_conversation">Clear Conversation</string>
	<string name="save_conversation">Save Conversation</string>
	<string name="share_from">Share from</string>
	<string name="search_hint">Username</string>
	<string name="message_timestamp"><xliff:g id="sent_or_received" example="Sent">%1$s</xliff:g>: <xliff:g id="time_sent_or_received">%2$s</xliff:g> <xliff:g id="delivered" example="Delivered">%3$s</xliff:g></string>
	<string name="secure">Secure</string>
	<string name="unlocked_title">Unlocked</string>
	<string name="unlocked_description">Tap to lock <xliff:g id="application_name" example="Silent Text">%1$s</xliff:g>.</string>
	<string name="attachment">Attachment</string>
	<string name="unknown">Unknown</string>
	<string name="verify_description_verified">For added security, you have verified this message with the recipient.</string>
	<string name="verify_description_unverified">For added security, verify this message with the recipient.</string>
	<string name="ringtone">Ringtone</string>
	<string name="ringtone_none">None</string>
	<string name="enable_notification_vibrate">Vibrate</string>
	<string name="someone">someone</string>
	<string name="silence">No messages to display.</string>
	<string name="application_locked">Application locked.</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="expires_n">Expires <xliff:g id="time_remaining" example="in 23 seconds">%1$s</xliff:g></string>
	<string name="unable_to_display_file">Unable to display this file</string>
	<string name="unable_to_display_image">Unable to display this image</string>
	<string name="not_downloaded">Not downloaded</string>
	<string name="create_username">Choose a username</string>
	<string name="create_password">Create a password</string>
	<string name="required_email_address">An alternate email address is necessary to receive important updates and benefits regarding your account.</string>
	<string name="required_username">Your username is how others will contact you on the <xliff:g id="company_name">Silent Circle</xliff:g> network.</string>
	<string name="required_password">Choose a strong password. This protects your account from unauthorized use.</string>
	<string name="optional_personal_information">This information is completely optional, and governs how your account will appear in directory listings.</string>
	<string name="email_address">Email address</string>
	<string name="personal_information">Personal information</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="tap_to_reveal">(tap to reveal)</string>
	<string name="password_not_shown">(password not shown)</string>
	<string name="accept_terms">I have read and accepted the privacy statement and terms and conditions</string>
	<string name="terms">Terms</string>
	<string name="permission_read">Read secure messages</string>
	<string name="permission_identify_senders">Read the sender name of incoming secure messages</string>
	<string name="permission_write">Write secure messages</string>
	<string name="permission_access_accounts">Access your <xliff:g id="company_name">Silent Circle</xliff:g> accounts on this device</string>
	<string name="not_connected">Not Connected</string>
	<string name="partner_welcome">Welcome to <xliff:g id="company_name" example="Silent Circle">%1$s</xliff:g> in partnership with <xliff:g id="partner" example="ACME">%2$s</xliff:g>.</string>
	<string name="partner_account_creation_prologue">As a <xliff:g id="partner" example="ACME">%2$s</xliff:g> customer, you enjoy <xliff:g id="free_trial_period" example="12 months">%3$s</xliff:g> of complimentary access to <xliff:g id="company_name" example="Silent Circle">%1$s</xliff:g>\'s encrypted communications services.</string>
	<string name="show_password">Show password</string>
	<string name="welcome_greeting">Welcome to <xliff:g id="application_name">Silent Text</xliff:g>!</string>
	<string name="welcome_tips_header">Here are some tips to help you to further improve the security of your data:</string>
	<string name="welcome_tip_passcode">Set a strong passphrase on <xliff:g id="application_name">Silent Text</xliff:g>.</string>
	<string name="welcome_tip_encrypt_device">Enable full-disk encryption on your device.</string>
	<string name="encrypt_device">Encrypt Device</string>
	<string name="security_rating_description">The number of stars next to a username indicates how confident you can be that your communications are secure.</string>
	<string name="security_rating_0">No security has yet been established.</string>
	<string name="security_rating_1">Communications are secured by public-key cryptography.</string>
	<string name="security_rating_2">Communications are secured by peer-to-peer key exchange.</string>
	<string name="security_rating_3">The identities of each peer in the conversation have been verified.</string>
	<string name="optional">(optional)</string>
	<string name="license_code">License Code</string>
</resources>