<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center">
	<RelativeLayout android:id="@+id/activation" style="@style/Widget.Silence.RelativeLayout">
		<LinearLayout style="@style/Widget.Silence.LinearLayout.Vertical" android:layout_above="@+id/buttons" android:layout_height="fill_parent" android:layout_width="fill_parent" android:padding="@dimen/spacing_large" android:background="@drawable/bg_notify_default" android:layout_margin="@dimen/spacing_large" android:gravity="center_vertical">
			<TextView android:id="@+id/partner_welcome" style="@style/Widget.Silence.TextView.PartnerMessaging" android:text="@string/partner_welcome"/>
			<LinearLayout style="@style/Widget.Silence.LinearLayout.Rotatable" android:gravity="center" android:layout_width="fill_parent">
				<ImageView android:id="@+id/logo" style="@style/Widget.Silence.ImageView" android:layout_width="@dimen/avatar_xlarge" android:layout_height="@dimen/avatar_xlarge" android:src="@drawable/logo_silentcircle" android:scaleType="fitCenter" android:contentDescription="@string/silent_circle"/>
				<LinearLayout style="@style/Widget.Silence.LinearLayout.Vertical">
					<EditText android:id="@+id/username" style="@style/Widget.Silence.EditText" android:hint="@string/username" android:inputType="textNoSuggestions|textEmailAddress"/>
					<EditText android:id="@+id/password" style="@style/Widget.Silence.EditText.Password" android:hint="@string/password"/>
					<CheckBox android:id="@+id/show_password" style="@style/Widget.Silence.CheckBox" android:text="@string/show_password"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<View android:layout_above="@+id/buttons" android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/blackphone_yellow"/>
		<LinearLayout android:id="@+id/buttons" android:layout_alignParentBottom="true" style="@style/Widget.Silence.LinearLayout.Horizontal" android:layout_width="fill_parent" android:gravity="center_vertical" android:background="@color/silent_black">
			<Button android:id="@+id/button_new_account" style="@style/Widget.Silence.SubtleButton.About" android:text="@string/create_account" android:drawableBottom="@null" android:layout_weight="1"/>
			<Button android:id="@+id/button_login" style="@style/Widget.Silence.SubtleButton.Login" android:text="@string/login" android:gravity="center_vertical|right" android:drawableBottom="@null" android:layout_weight="1"/>
		</LinearLayout>
		<ImageView android:id="@+id/action_settings" style="@style/Widget.Silence.ImageView.ActionButton" android:src="@drawable/ic_action_settings" android:contentDescription="@string/settings" android:layout_margin="@dimen/spacing_large" android:layout_alignParentEnd="true"/>
	</RelativeLayout>
	<TextView style="@style/Widget.Silence.TextView.Error" android:id="@+id/error" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center_horizontal"/>
	<include layout="@layout/indeterminate_progress" android:visibility="gone" android:id="@+id/progress"/>
</RelativeLayout>
